<resources>
    <string name="app_name">StoriChallenge</string>
    <string name="txt_dummy">Text dummy</string>
    <string name="txt_button_option">Option</string>
    <string name="txt_stori_logo">Logo de Stori</string>
    <string name="txt_sign_in">Iniciar sesión</string>
    <string name="txt_create_account">Quiero mi Stori</string>
    <string name="txt_continue">Continuar</string>
    <string name="txt_title_permissions">Tu cuenta siempre esta segura y actualizada</string>
    <string name="txt_permissions_description">Para usar la app, es necesario darle los permisos necesarios.</string>
    <string name="txt_biometric">Autenticación biométrica</string>
    <string name="txt_biometric_auth_description">Utilizaremos tus datos biométricos para acceder de forma segura a tu información</string>
    <string name="txt_camera">Cámara</string>
    <string name="txt_camera_description">Necesitamos acceder a tu cámara para validar tus datos personales.</string>
    <string name="txt_check_u_information">Queremos conocerte</string>
    <string name="txt_kyc_description">Es importante que llenes todos los campos para crear un perfil completo 🚀</string>
    <string name="txt_name">Nombre</string>
    <string name="txt_write_u_name">Escribe tu nombre</string>
    <string name="txt_write_u_last_name">Escribe tu apellido paterno</string>
    <string name="txt_write_u_email">Escribe tu correo electrónico</string>
    <string name="txt_write_u_password">Escribe una contraseña segura</string>
    <string name="txt_write_u_re_password">Confirma tu contraseña</string>
    <string name="txt_check_u_email">Iniciemos con tu correo electrónico</string>
    <string name="txt_hint_email">Correo electrónico</string>
    <string name="txt_enter_valid_email">Ingresa un correo válido</string>
    <string name="txt_password_title">Elige una contraseña</string>
    <string name="txt_password_description">Recuerda que debes elegir una contraseña segura. 🔐</string>
    <string name="txt_instructions_password">Tu contraseña debe tener:</string>
    <string name="txt_capital_letters">Al menos una mayúscula.</string>
    <string name="txt_eight_characters">Más de 8 caracteres.</string>
    <string name="txt_special_characters">Al menos un caracter especial.</string>
    <string name="txt_at_least_one_number">Al menos un número.</string>
    <string name="txt_email_description">Debes escribir un email existente y que no pertenezca a otra cuenta. 📩</string>
    <string name="txt_validate_id_title">Necesitamos validar tu identidad</string>
    <string name="txt_validate_id_description">Sube una foto de tu identificación. ⬆️</string>
    <string name="txt_permissions_camera">Permisos para el uso de la cámara</string>
    <string name="txt_permissions_camera_description">Recuerda que para poder acceder a esta funcionalidad, debes brindarnos permisos de cámara para obtener la fotografía de tu identificación.</string>
    <string name="txt_resources">Recursos</string>
    <string name="txt_resources_camera_description">Recuerda que puedes tomar una foto o elegirla desde tu galería.</string>
    <string name="take_photo">Tomar foto</string>
    <string name="txt_permissions_not_granted">Permisos no otorgados por la usuario</string>
    <string name="txt_error_take_photo">"La captura de la foto falló por: "</string>
    <string name="txt_error_photo_selected">Debes seleccionar una imagen</string>
    <string name="txt_preview_image_title">Revisa tu imagen</string>
    <string name="txt_preview_image_description">Debes validar que tu foto se vea clara. ✅</string>
    <string name="txt_congrats">¡Felicidades!</string>
    <string name="txt_congrats_description">Ahora eres perte del Stori Team. 💰</string>
    <string name="txt_finish">Terminar</string>
    <string name="txt_total_balance">Balance total</string>
    <string name="txt_home">Inicio</string>
    <string name="txt_dummy_amount">$65,000.00</string>
    <string name="txt_transaction_history_title">Historial de transacciones</string>
    <string name="txt_dummy_date">30 May 8:00 PM</string>
    <string name="txt_sign_in_title">Inicia sesión</string>
    <string name="txt_write_u_password_copy">Escribe tu contraseña</string>
    <string name="txt_hint_email_copy">Escribe tu correo electrónico</string>
    <string name="txt_try_later">Intentar más tarde</string>
    <string name="txt_see_again">¡Bienvenido de nuevo!</string>
    <string name="txt_select_unlock_description">Selecciona la forma de ingresar a tu cuenta</string>
    <string name="txt_biometric_auth">Autenticación biométrica</string>
    <string name="txt_password">Contraseña</string>
    <string name="txt_enter_stori">Stori Challenge</string>
    <string name="txt_scan_fingerprint">Escanea tu huella para ingresar</string>
    <string name="txt_use_password">USAR CONTRASEÑA</string>
    <string name="txt_sign_out">Cerrar sesión</string>
    <string name="txt_last_name">Apellido</string>
    <string name="txt_profile">Perfil</string>
    <string name="txt_welcome">¡Bienvenido!</string>
    <string name="txt_login_description">Crea tu cuenta en Stori o Inicia sesión</string>
    <string name="txt_transaction_history_placeholder">No hay información para mostrar</string>
</resources>