<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/validators"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/cbEightCharacters"
            style="@style/TextAppearance.Stori.Title.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_eight_characters" />

        <CheckBox
            android:id="@+id/cbCapitalLetters"
            style="@style/TextAppearance.Stori.Title.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_capital_letters" />

        <CheckBox
            android:id="@+id/cbSpecialCharacters"
            style="@style/TextAppearance.Stori.Title.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_special_characters" />

        <CheckBox
            android:id="@+id/cbAtLeastOneNumber"
            style="@style/TextAppearance.Stori.Title.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_at_least_one_number" />

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input"
        style="@style/TextInputLayout.Stori.OutlinedBox"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_all_16"
        android:layout_marginTop="16dp"
        android:hint="@string/txt_write_u_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/validators">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            style="@style/TextAppearance.Stori.Widget.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:text="nsanchez@stori.mx" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/re_password_input"
        style="@style/TextInputLayout.Stori.OutlinedBox"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_all_16"
        android:layout_marginTop="16dp"
        android:hint="@string/txt_write_u_re_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/re_password"
            style="@style/TextAppearance.Stori.Widget.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:text="nsanchez@stori.mx" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>