<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".modules.onboarding.cameraUsageWarningScreen.presentation.view.CameraUsageWarningFragment">

    <TextView
        android:id="@+id/title"
        style="@style/TextAppearance.Stori.Title.Large"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_all_16"
        android:layout_marginTop="@dimen/dp_80"
        android:textColor="@color/stori_primary"
        android:textStyle="bold"
        android:text="@string/txt_validate_id_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        style="@style/TextAppearance.Stori.Title.Small"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_all_16"
        android:layout_marginTop="@dimen/margin_all_16"
        android:text="@string/txt_validate_id_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_card_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description">

        <ImageView
            android:id="@+id/icon_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@null"
            android:src="@drawable/icon_camera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/permissions"
            style="@style/TextAppearance.Stori.Title.Small.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/txt_permissions_camera"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/icon_camera"
            app:layout_constraintStart_toEndOf="@+id/icon_camera"
            app:layout_constraintTop_toTopOf="@+id/icon_camera" />

        <TextView
            android:id="@+id/camera_description"
            style="@style/TextAppearance.Stori.Title.Small"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_all_16"
            android:text="@string/txt_permissions_camera_description"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/permissions"
            app:layout_constraintTop_toBottomOf="@+id/permissions" />

        <ImageView
            android:id="@+id/icon_resources"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@null"
            android:src="@drawable/icon_camera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/camera_description" />

        <TextView
            android:id="@+id/resources"
            style="@style/TextAppearance.Stori.Title.Small.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/txt_resources"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/icon_resources"
            app:layout_constraintStart_toEndOf="@+id/icon_resources"
            app:layout_constraintTop_toTopOf="@+id/icon_resources" />

        <TextView
            android:id="@+id/resources_description"
            style="@style/TextAppearance.Stori.Title.Small"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_all_16"
            android:layout_marginBottom="16dp"
            android:text="@string/txt_resources_camera_description"
            android:textAlignment="textStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/resources"
            app:layout_constraintTop_toBottomOf="@+id/resources" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnContinue"
        style="@style/Widget.Stori.Button.Primary"
        android:layout_marginHorizontal="@dimen/margin_all_16"
        android:layout_marginBottom="@dimen/margin_all_16"
        android:background="@color/stori_primary"
        android:backgroundTint="@color/stori_primary"
        android:enabled="true"
        android:text="@string/txt_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>